FlipView: Bugfix, Hide Scrollbar on Firefox

--- a/css/default.css
+++ b/css/default.css
@@ -1926,5 +1926,18 @@ html.win-hoverable .win-itemcontainer.win-selectionstylefilled.win-container.win
 .win-flipview > div > .win-surface::-webkit-scrollbar {
     display: none;
     -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+}
+@-moz-document url-prefix() {
+    .win-flipview > div > .win-surface.win-horizontal {
+        height: calc(100% + 16px);
+        margin-bottom: -16px;
+    }
+    .win-flipview > div > .win-surface.win-vertical:not(:dir(rtl)) {
+        width: calc(100% + 16px);
+        margin-right: -16px;
+    }
+    .win-flipview > div > .win-surface.win-vertical:dir(rtl) {
+        width: calc(100% + 16px);
+        margin-left: -16px;
+    }
 }
